kubernetes/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: 'acresgisebbenjamin.azurecr.io/flask-app:v1'
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: acr-auth
